# telco-customer-churn-analysis

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
telco_customer_analysis/: __init__.py  dataset.py  features.py  plots.py
telco_customer_analysis/modeling/: predict.py  train.py
